--- a/composing/mysql.only/docker-compose.yml
+++ b/composing/mysql.only/docker-compose.yml
@@ -2,31 +2,31 @@ version: '2'
 
 services:
   db:
-    build: ./images/mysql
+    build: ../../images/mysql
     container_name: ${PROJECT}db
     networks:
-      - laravel
+      - devnet
     restart: always
     ports:
-      - 3306:3306
+      - ${MYSQL_PORT}:3306
     volumes_from:
       - files
     environment:
-      MYSQL_DATABASE: laravel
-      MYSQL_USER: laravel
-      MYSQL_PASSWORD: laravelpwd
-      MYSQL_ROOT_PASSWORD: rootpwd
+      MYSQL_DATABASE: ${DB_CATALOG}
+      MYSQL_USER: ${DB_USER}
+      MYSQL_PASSWORD: ${DB_PASSWD}
+      MYSQL_ROOT_PASSWORD: ${DB_ROOT_PASSWD}
 
   adminer:
     image: adminer
     container_name: ${PROJECT}adminer
     networks:
-      - laravel
+      - devnet
     links:
       - db:db
     restart: always
     ports:
-      - 8080:8080
+      - ${ADMINER_PORT}:8080
     environment:
       UPLOAD: 1024M
 
@@ -34,15 +34,15 @@ services:
     image: alpine:latest
     container_name: ${PROJECT}files
     volumes:
-      - ./local/logs/mysql:/var/log/mysql
-      - ./local/db:/var/lib/mysql
+      - ${DATA_PATH}/logs/mysql:/var/log/mysql
+      - ${DATA_PATH}/db:/var/lib/mysql
     networks:
-      - laravel
+      - devnet
 
 networks:
-  laravel:
+  devnet:
     driver: bridge
     ipam:
       driver: default
       config:
-        - subnet: 10.151.0.0/24
+        - subnet: ${SUBNET}
